[package]
name = "teddy-fyi-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# axum is our web framework, tokio is our async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
google-oauth = "1"
sqlx = { version = "0.8", features = [ "postgres", "macros", "chrono", "runtime-tokio-native-tls" ] }
serde = "1.0.228"
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
